# ChatX

./: .gitignore  README.md  agent_simulator.py  agents.json  compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: constants.py  database.py  settings.py
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 4eee97b10874_initial_migration.py
models/: message.py
routes/: chat.py  sse.py
schemas/: message.py
services/: bot_service.py  message_service.py
static/css/: input.css  style.css
static/js/: chat.js
templates/: base.html  chat.html  index.html
